syntax = "proto3";
package pb;
option go_package = ".;pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message Users {
  repeated User user = 1;
}

message UserResultStream {
  string status = 1;
  User user = 2;
}

service UserService {
  rpc AddUser (User) returns (User);
  rpc AddUsers (stream User) returns (Users);
  rpc AddUserVerbose (User) returns (stream UserResultStream);
  rpc AddUserStreamBoth (stream User) returns (stream UserResultStream);
}